syntax = "proto3";

package com.iscas.common.rpc.tools.grpc.stream;

option java_package = "com.iscas.common.rpc.tools.grpc.stream";
option java_outer_classname = "StreamProto";
option java_multiple_files = true;

//rpc方法
service StreamService {
    rpc List(StreamRequest) returns (stream StreamResponse) {};
    rpc Record(stream StreamRequest) returns (StreamResponse) {};
    rpc Route(stream StreamRequest) returns (stream StreamResponse) {};
}

message StreamPoint {
    string name = 1;
    int32 value = 2;
}


message StreamRequest {
    StreamPoint pt = 1;
}

message StreamResponse {
    StreamPoint pt = 1;
}